@@ -1,5 +1,12 @@
 #!/usr/bin/perl -w
 
+BEGIN {
+  unless ($ENV{RELEASE_TESTING}) {
+    require Test::More;
+    Test::More::plan(skip_all => 'these tests are for release candidate testing');
+  }
+}
+
 use strict;
 use Test::More;
 eval "use Test::Pod::Coverage 1.00";
